Node_Package/Node_lg_groundtruth_data_ws/lg_groundtruth_data_ws/log/build_2021-01-14_04-14-57/lg_sub_groundtruth/stderr.log
  File "/home/acclivis_linux2/script/lg_groundtruth_data_ws/install/lg_sub_groundtruth/lib/python3.6/site-packages/lg_sub_groundtruth/lg_gt3d_subscriber.py", line 201
    report_file.write("Time Stamp of Groundtruth and AD Stack Data : %s \n", % lgstamp )
                                                                             ^
SyntaxError: invalid syntax

